--- a/views/result.ejs
+++ b/views/result.ejs
@@ -11,10 +11,9 @@
     <title>Verify PDF</title>
 </head>
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Mochiy+Pop+P+One&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
     .logo{
-        font-family: 'Lobster', cursive;
-        font-family: 'Mochiy Pop P One', sans-serif;
+        font-family: 'Montserrat', sans-serif;
     }
     #screen1-inner {
         overflow: hidden;
@@ -24,9 +23,15 @@
 
 </style>
 <body class="flex flex-col h-full">
-    <nav class="w-100 py-3 px-10 bg-emerald-600">
-        <a href="/" class="font-bold text-gray-50 logo text-lg">Verify PDF</a>
+    <nav class="flex flex-row items-center w-100 py-3 px-10 bg-gray-800">
+        <img src="./public/image/itb.png" 
+        width="50" 
+        height="50"
+        class="mr-4"/>
+        
+        <a href="/" class="font-bold text-gray-50 logo text-lg">Verifikasi PDF</a> 
     </nav>
+
     <main class="grow px-[10%] py-10 justify-center flex ">
         <div class="xl:w-[60%] w-[95%] justify-self-center flex flex-col">
             <h3 class="text-upper text-2xl text-cyan-900 font-bold text-center mb-3" >Result</h3>
