--- a/views/result.ejs
+++ b/views/result.ejs
@@ -73,11 +73,12 @@
                     </tr>
                 </tbody>
             </table>
-
+            
             <% certs.map(function(cert, i) { %>
-            <table class="table-fixed border-collapse mt-5" style="border-spacing: 0 5px;">
-                <tbody >
-                    
+            <h3 class="mt-5 mb-3 text-lg font-bold">Public Key Certificate: <%= cert.issuedTo['commonName'] %></h3>
+            
+            <table class="table-fixed border-collapse mt-1" style="border-spacing: 0 5px;">
+                <tbody >   
                     <tr class="bg-indigo-100">
                         <th class="text-left border px-4 py-3" colspan="2">Issued By</th>
                     </tr>
